samples/_failures_safe/1761078283_e32e00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f96d45c.c: In function ‘main’:
./samples/SAFE/__tmp_0f96d45c.c:155:21: error: expected expression at end of input
  155 |                     print_matrix(&result,
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_0f96d45c.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f96d45c.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f96d45c.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f96d45c.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f96d45c.c:155:21: error: expected declaration or statement at end of input
